--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,12 @@
 
 html body {
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,5 +21,5 @@ body {
 
 :root {
   position: relative;
-  height: 100%;
+  width: 100%;
 }
