--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@layer theme, base, components, utilities;
+@layer theme, base, components, primereact, utilities;
 
 @import 'primereact/resources/themes/tailwind-light/theme.css';
 
@@ -6,32 +6,19 @@
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
 
-html body {
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  min-height: 100%;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-:root {
-  position: relative;
-  width: 100%;
-}
 
 .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-link .p-submenu-icon {
-  order: 2 !important; /* 确保图标在右侧 */
-  margin-left: auto !important; /* 推动图标到最右 */
-  margin-right: 0 !important; /* 清除右边距 */
+  order: 2;
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon {
-  order: 2 !important; /* 确保图标在右侧 */
-  margin-left: auto !important; /* 推动图标到最右 */
-  margin-right: 0 !important; /* 清除右边距 */
+  order: 2;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  padding-left: 40px;
 }
