chage ui library to mui

--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,1 @@
-@layer theme, base, components, primereact, utilities;
-
-@import 'primereact/resources/themes/tailwind-light/theme.css';
-
-@import "tailwindcss/theme.css" layer(theme);
-@import "tailwindcss/preflight.css" layer(base);
-@import "tailwindcss/utilities.css" layer(utilities);
-
-
-.p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-link .p-submenu-icon {
-  order: 2;
-  margin-left: auto;
-  margin-right: 0;
-}
-
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon {
-  order: 2;
-  margin-left: auto;
-  margin-right: 0;
-}
-
-.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link {
-  padding-left: 40px;
-}
+@import 'tailwindcss';
