--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,3 +15,19 @@
 .bg-warning-gradient {
     background: radial-gradient(circle at center top, $amber, $warning);
 }
+
+.spin {
+  animation: spin 2s linear infinite;
+}
+
+
+/* keyframes */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
