feat: 修改dict, region, privilege树形表格的展示，移除subPage

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -102,6 +102,11 @@ body {
   }
 }
 
+.cell {
+  display: inline-flex;
+  align-items: center;
+}
+
 .spin {
   animation: spin 2s linear infinite;
 }
